--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -71,6 +71,7 @@ p span.i3{
 [epub|type~="epigraph"]{
 	font-style: italic;
 	hyphens: none;
+	-epub-hyphens: none;
 }
 
 [epub|type~="epigraph"] cite{
